--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^4.5.0",
     "prettier": "^2.1.2",
+    "prop-types": "^15.7.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
