Add basic style, Add Logo, Add Flyto on map click

--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     ]
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.0.2",
+    "react-use": "^15.3.4",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
