--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.2",
+    "react-spinners": "^0.9.0",
     "react-use": "^15.3.4",
     "styled-components": "^5.2.1"
   },
